--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,11 +1,11 @@
-#imgBefore {
+#imgBefore:hover {
   box-shadow: 0 0 4px 1px rgba(0, 140, 186, 0.5);
 }
 
-#imgAfter {
+#imgAfter:hover {
   box-shadow: 0 0 4px 1px rgba(0, 140, 186, 0.5);
 }
 
-#imgAsp {
+#imgAsp:hover {
   box-shadow: 0 0 4px 1px rgba(0, 140, 186, 0.5);
 }
