--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -9,3 +9,7 @@
 #imgAsp:hover {
   box-shadow: 0 0 4px 1px rgba(0, 140, 186, 0.5);
 }
+
+#imgAvalon:hover {
+  box-shadow: 0 0 4px 1px rgba(0, 140, 186, 0.5);
+}
