--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,12 +1,16 @@
-#imgBefore:hover {
+#imgAffinityLogin:hover {
   box-shadow: 0 0 4px 1px rgba(0, 140, 186, 0.5);
 }
 
-#imgAfter:hover {
+#imgAffinityProfile:hover {
   box-shadow: 0 0 4px 1px rgba(0, 140, 186, 0.5);
 }
 
-#imgAsp:hover {
+#imgAffinityFriends:hover {
+  box-shadow: 0 0 4px 1px rgba(0, 140, 186, 0.5);
+}
+
+#imgAffinityChat:hover {
   box-shadow: 0 0 4px 1px rgba(0, 140, 186, 0.5);
 }
 
