--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -1,3 +1,7 @@
+#imgAccPortal:hover {
+  box-shadow: 0 0 4px 1px rgba(0, 140, 186, 0.5);
+}
+
 #imgAffinityLogin:hover {
   box-shadow: 0 0 4px 1px rgba(0, 140, 186, 0.5);
 }
